# sparta

cmake/common/process/: sparta_build_options.cmake
cmake/presets/: mpi.cmake
src/: CMakeLists.txt  remove_surf.cpp
src/KOKKOS/: CMakeLists.txt  kokkos.cpp
src/STUBS/: CMakeLists.txt
tools/testing/: rebless.sh  regression.py
